# learning-haskell

./: .project  learning.cabal
src/: baby.hs
