name:           learning
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall

executable learning
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

